# sf-project

./: LICENSE  README.md  pyproject.toml  requirements.txt
guess-number-task/: Guess_numbers.py  README.md  game_v2.py
