[tool.poetry]
name = "game"
version = "0.1"
description = "тестирование работы poetry"
authors = ["Dmitriy-Vilisov <vilisov.vdv@yandex.ru>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
